<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Edit">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textSize="35sp" />

        <Button
            android:id="@+id/btnSave"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/btnSave"
            android:textColor="@color/cardview_dark_background"
            android:backgroundTint="@color/white"
            android:textSize="20sp"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>


    <EditText
        android:id="@+id/editTextDescription"
        android:layout_width="374dp"
        android:layout_height="98dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="7dp"
        android:ems="10"
        android:hint="@string/etDescription"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddDescription" />

    <TextView
        android:id="@+id/txtAddDescription"
        android:layout_width="263dp"
        android:layout_height="21dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="11dp"
        android:text="@string/AddDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbarEdit" />

    <Button
        android:id="@+id/btnPickDate"
        android:layout_width="179dp"
        android:layout_height="49dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="10dp"
        android:text="@string/AddDate"
        android:textColor="@color/white"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription" />

    <EditText
        android:id="@+id/etDate"
        android:layout_width="163dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/etDate"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextDescription"
        tools:ignore="TextFields" />

    <Button
        android:id="@+id/btnPickTime"
        android:layout_width="179dp"
        android:layout_height="48dp"
        android:layout_marginStart="20dp"
        android:layout_marginTop="19dp"
        android:text="@string/AddTime"
        android:textColor="@color/white"
        android:backgroundTint="@color/cardview_dark_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btnPickDate" />

    <EditText
        android:id="@+id/etTime"
        android:layout_width="126dp"
        android:layout_height="54dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="16dp"
        android:ems="10"
        android:hint="@string/etTime"
        android:inputType="textPersonName"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etDate" />

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="255dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:ems="10"
        android:hint="@string/etName"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddPerson" />

    <TextView
        android:id="@+id/txtAddPerson"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="10dp"
        android:text="@string/AddPerson"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/etTime" />

    <TextView
        android:id="@+id/txtAddAddress"
        android:layout_width="wrap_content"
        android:layout_height="19dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="11dp"
        android:text="@string/AddAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_width="354dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:layout_marginTop="3dp"
        android:ems="10"
        android:hint="@string/etAddress"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddAddress" />

    <TextView
        android:id="@+id/txtAddPhoneNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="28dp"
        android:layout_marginTop="9dp"
        android:text="@string/AddPhoneNumber"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextAddress" />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_width="211dp"
        android:layout_height="51dp"
        android:layout_marginStart="28dp"
        android:ems="10"
        android:hint="@string/etPhoneNumber"
        android:inputType="textPersonName"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAddPhoneNumber" />

</androidx.constraintlayout.widget.ConstraintLayout>