<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="5dp"
    card_view:cardCornerRadius="4dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="wrap_content"
        android:layout_height="120dp"
        android:orientation="horizontal"
        android:visibility="visible">

        <TextView
            android:id="@+id/txtDescription"
            android:layout_width="393dp"
            android:layout_height="22dp"
            android:layout_margin="5dp"
            android:text="@string/Description"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtDate"
            android:layout_width="127dp"
            android:layout_height="19dp"
            android:layout_margin="5dp"
            android:layout_marginStart="48dp"
            android:layout_marginTop="12dp"
            android:text="@string/Date"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDescription" />

        <TextView
            android:id="@+id/txtTime"
            android:layout_width="87dp"
            android:layout_height="19dp"
            android:layout_margin="5dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="5dp"
            android:text="@string/Time"
            card_view:layout_constraintStart_toEndOf="@+id/txtDate"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDescription" />

        <TextView
            android:id="@+id/txtName"
            android:layout_width="160dp"
            android:layout_height="21dp"
            android:layout_margin="5dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="85dp"
            android:text="@string/Name"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDescription" />

        <TextView
            android:id="@+id/txtAdress"
            android:layout_width="390dp"
            android:layout_height="21dp"
            android:layout_margin="5dp"
            android:layout_marginStart="5dp"
            android:text="@string/Adress"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtDate" />

        <TextView
            android:id="@+id/txtState"
            android:layout_width="85dp"
            android:layout_height="19dp"
            android:layout_margin="5dp"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="30dp"
            android:text="@string/State"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintTop_toBottomOf="@+id/txtAdress" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.cardview.widget.CardView>