<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/CheckboxMusicNo"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".views.Settings">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarSettings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/cardview_dark_background"
        android:minHeight="?actionBarSize"
        android:theme="?actionBarTheme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/imageButtonBack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="left"
            android:contentDescription="@string/todo"
            android:onClick="goBack"
            app:srcCompat="?attr/actionModeCloseDrawable"
            tools:layout_editor_absoluteX="16dp"
            tools:layout_editor_absoluteY="6dp" />

        <TextView
            android:id="@+id/txtSettings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:contentDescription="@string/todo"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="35sp" />

    </androidx.appcompat.widget.Toolbar>

    <TextView
        android:id="@+id/txtNotification"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="15dp"
        android:contentDescription="@string/todo"
        android:text="@string/notification"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbarSettings" />

    <Spinner
        android:id="@+id/notificationSpinner"
        android:layout_width="195dp"
        android:layout_height="29dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/Colors"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="44dp"
        android:contentDescription="@string/todo"
        android:text="@string/color"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/notificationSpinner" />

    <Spinner
        android:id="@+id/colorSpinner"
        android:layout_width="195dp"
        android:layout_height="29dp"
        android:layout_marginTop="144dp"
        android:layout_marginEnd="60dp"
        android:contentDescription="@string/todo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/musics"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="48dp"
        android:text="@string/music"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Colors" />

    <CheckBox
        android:id="@+id/checkBoxMusiqueYes"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="17dp"
        android:layout_marginTop="25dp"
        android:checked="false"
        android:onClick="onClickCheckBox"
        android:text="@string/checkYes"
        app:layout_constraintStart_toEndOf="@+id/musics"
        app:layout_constraintTop_toBottomOf="@+id/colorSpinner" />

</androidx.constraintlayout.widget.ConstraintLayout>